--- a/2_dataTypes/2.3_sequenceTypes/bytes.ipynb
+++ b/2_dataTypes/2.3_sequenceTypes/bytes.ipynb
@@ -34,6 +34,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello World'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bytes objects can be concatenated using the '+' operator \n",
+    "data1 = b\"Hello \"\n",
+    "data2 = b\"World\"\n",
+    "print(data1 + data2) # b'Hello World'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,10 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello'\n",
+      "b'Hello'\n",
+      "b'Hey'\n",
+      "b'hello'\n"
+     ]
+    }
+   ],
    "source": [
+    "# can simply create using byte literal\n",
+    "data = b\"Hello\"\n",
+    "print(data) # b'Hello'\n",
     "# if a string is used in the constructor then the encoding must be specified \n",
     "data1 = bytes(\"Hello\", \"utf-8\")\n",
     "print(data1) # b'Hello'\n",
@@ -56,8 +90,8 @@
     "print(data2) # b'Hey'\n",
     "\n",
     "# we can create a bytes object from a string using encode() method \n",
-    "data = \"hello\"\n",
-    "encoded_data = data.encode(\"ascii\")\n",
+    "data3 = \"hello\"\n",
+    "encoded_data = data3.encode(\"ascii\")\n",
     "print(encoded_data) # b'hello'\n",
     "\n"
    ]
@@ -183,6 +217,28 @@
     "\n",
     "# to get a string of hexadecimal representation of the bytes.\n",
     "print(encoded_data.hex()) # 486169206920616d2076696d616c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello-World'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# JOIN\n",
+    "# Bytes objects can use the join() method . \n",
+    "# But the items should be passed as a sequence(list, tuple ..) of instances of bytes \n",
+    "data1 = b\"Hello\"\n",
+    "data2 = b\"World\"\n",
+    "print(b\"-\".join([data1, data2])) # b'Hello-World'"
    ]
   }
  ],
