--- a/2_dataTypes/2.3_sequenceTypes/bytearray.ipynb
+++ b/2_dataTypes/2.3_sequenceTypes/bytearray.ipynb
@@ -20,6 +20,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bytearray(b'ABCDABCD')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Two bytearray objects can be concatenated using the '+' operator  \n",
+    "arr = bytearray([65, 66, 67, 68])\n",
+    "print(arr + arr) # bytearray(b'ABCDABCD')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,9 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 123]\n",
+      "2\n",
+      "[1, 2, 3, 4, 5, 6, 123, 10, 20, 30]\n",
+      "[1, 2, 255, 3, 4, 5, 6, 123, 10, 20, 30]\n",
+      "255\n",
+      "30\n",
+      "[1, 2, 3, 4, 5, 6, 123, 10, 20]\n",
+      "[1, 2, 4, 5, 6, 123, 10, 20]\n",
+      "1\n",
+      "[20, 10, 123, 6, 5, 4, 2, 1]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "encoded_data = bytearray([1, 2, 3, 4, 5, 6])\n",
     "print(list(encoded_data)) # [1, 2, 3, 4, 5, 6]\n",
@@ -39,6 +77,10 @@
     "# append a single item to the end \n",
     "encoded_data.append(123)\n",
     "print(list(encoded_data)) # [1, 2, 3, 4, 5, 6, 123]\n",
+    "\n",
+    "# search for the index of a particular item in the list\n",
+    "# encoded_data.index(value, start, stop)\n",
+    "print(encoded_data.index(3, 0, len(encoded_data))) # 2\n",
     "\n",
     "# Extends the bytearray by appending all the elements from an iterable.\n",
     "encoded_data.extend([10, 20, 30])\n",
@@ -59,6 +101,9 @@
     "encoded_data.remove(3)\n",
     "print(list(encoded_data)) # [1, 2, 4, 5, 6, 123, 10, 20]\n",
     "\n",
+    "# To count the number of occurrence of an item in the list \n",
+    "print(encoded_data.count(123)) # 1\n",
+    "\n",
     "# Reverses the order of the items in the bytearray in place.\n",
     "encoded_data.reverse()\n",
     "print(list(encoded_data)) # [20, 10, 123, 6, 5, 4, 2, 1]\n",
@@ -67,6 +112,55 @@
     "encoded_data.clear()\n",
     "print(list(encoded_data)) # []"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bytearray also supports slicing \n",
+    "arr = bytearray([1, 2, 3, 4, 5, 6, 7]) \n",
+    "new_arr = arr[0:len(arr):2]\n",
+    "print(list(new_arr)) # [1, 3, 5, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello#World'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bytearray also supports join()\n",
+    "# Here the argument to the function should be a sequence (list, tuple, ...) of \n",
+    "# bytearray objects \n",
+    "arr1 = bytearray(b\"Hello\")\n",
+    "arr2 = bytearray(b\"World\")\n",
+    "print(b\"#\".join([arr1, arr2])) # b'Hello#World'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
